# MAP

./: .gitignore  CMakeLists.txt  READMD.md  README.md  main.py
.github/workflows/: check-build.yaml
MAP/: CMakeLists.txt  problem.cpp  problem.h  solver.cpp  solver.h
examples/cpp/: CMakeLists.txt  README.md  map_example.cpp
examples/python/: README.md  map_example.py
python/: CMakeLists.txt  setup.py.in
python/map_python/: __init__.py  python_wrapper.cpp
src/: problems.py  solver.py
